[gd_scene load_steps=33 format=2]

[ext_resource path="res://Sprites/PlayerRunAnim.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Circle.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Grab.gd" type="Script" id=4]
[ext_resource path="res://SoundEffect/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://SoundEffect/grab.wav" type="AudioStream" id=6]
[ext_resource path="res://SoundEffect/bounce.wav" type="AudioStream" id=7]
[ext_resource path="res://Scripts/Trail.gd" type="Script" id=8]
[ext_resource path="res://Sprites/PlayerBounce.png" type="Texture" id=9]
[ext_resource path="res://Sprites/playerNoJump.png" type="Texture" id=10]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.0818181 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.990909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.304688, 0, 0, 1, 0.351563, 0, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 13.9314

[sub_resource type="CircleShape2D" id=4]
radius = 47.8037

[sub_resource type="CircleShape2D" id=5]
radius = 177.497

[sub_resource type="CircleShape2D" id=6]
radius = 14.8451

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 100, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 30 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 30 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "IdleAir",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Bounce",
"speed": 30.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Idle",
"speed": 30.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 3 )

[node name="Trail" type="Line2D" parent="."]
width = 25.0
width_curve = SubResource( 1 )
default_color = Color( 1, 0.470588, 0, 1 )
gradient = SubResource( 2 )
texture_mode = 1
script = ExtResource( 8 )
trailLength = 10
targetPath = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Circle" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Circle"]
shape = SubResource( 4 )

[node name="GrabZone" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabZone"]
position = Vector2( 0.33371, 0.166855 )
shape = SubResource( 5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="Sound" type="Node" parent="."]

[node name="SoundJump" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 5 )
volume_db = -4.0

[node name="SoundGrab" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 6 )
volume_db = -4.0

[node name="SoundBounce" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 7 )
volume_db = -4.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 6 )

[node name="Animator" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 14 )
animation = "Idle"
